--- a/my-app/src/app/login/login.component.html
+++ b/my-app/src/app/login/login.component.html
@@ -14,7 +14,10 @@
                 </div>
             </div>
             <div id="box2">
-                caja 1.2
+                <div>
+                    <p id="aside-text-up-box2">¿Aún no tienes una cuenta?</p>
+                    <a id="register-now" href="#">Registrate ahora</a>
+                </div>
             </div>
         </div>
         <div>
