--- a/my-app/src/app/login/login.component.css
+++ b/my-app/src/app/login/login.component.css
@@ -33,7 +33,7 @@
     text-align: center;
 }
 
-#box2{
+#down-container{
     background-color: black;
     display: flex;
     flex-direction: column;
@@ -67,6 +67,99 @@
     text-align: center;
 }
 
+#box2 {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 20px;
+}
 
+
+.text-signin{
+    width: 500px;
+    text-align: start;
+}
+
+#start-text {
+    color:#00ABEB;
+    font-size: 30px;
+   font-weight: bold;
+}
+
+#session-text {
+    color:black;
+    font-size: 30px;
+    font-weight: bold;
+}
+
+#inputs-form {
+    display:flex;
+    flex-direction: column;
+    gap: 18px;
+}
+
+input[type="email"] , input[type="password"] {
+    width: 500px;
+    padding: 14px;
+    background-color: #E7E7E7;
+    border-radius: 4px;
+    border: none;
+}
+
+input[type="email"]::placeholder , input[type="password"]::placeholder {
+    color: black;
+    opacity: 1;
+}
+
+.input-container {
+    position: relative;
+}
+
+.input-container input {
+    padding-right: 30px;
+}
+
+.input-container .input-icon {
+    position: absolute;
+    right: 10px;
+    top: 10%;
+    transform: translateY(50%);
+}
+
+#text-trouble {
+    text-align: start;
+    width: 500px;
+}
+
+#trobule-message {    
+    color: black;
+    font-size: 14px;
+   font-weight: bold;
+}
+
+#recovery-message {
+    color:#00ABEB;
+    font-size: 14px;
+    font-weight: bold;
+}
+
+
+#login-btn {
+    width: 500px;
+}
+
+#login-button {
+    background-color: black;
+    color: white;
+    font-size: 15px;
+    font-weight: bold;
+    padding: 18px;
+    border: none;
+    border-radius: 20px;
+    cursor: pointer;
+    margin-top: 18px;
+    width: 160px;
+}
 
 
