--- a/my-app/src/app/login/login.component.html
+++ b/my-app/src/app/login/login.component.html
@@ -1,27 +1,69 @@
 <div class="main-container">
-    <div id="grid-container">
-        <div class="up-container">
-            <div id="box1">
-                <div>
-                    <img src="./assets/Logo_Consultec.png" width="140px" height="50px">
-                </div>
-                <div>
-                    <h2 id="aside-text">Te damos la bienvenida al portal Personal Banking</h2>
-                </div>
-                <div>
-                    <p id="aside-text-down">¿Eres nuevo en el banco?</p>
-                    <a id="create-key-text" href="#">Crea tu clave</a>
-                </div>
-            </div>
-            <div id="box2">
-                <div>
-                    <p id="aside-text-up-box2">¿Aún no tienes una cuenta?</p>
-                    <a id="register-now" href="#">Registrate ahora</a>
-                </div>
-            </div>
+  <div id="grid-container">
+    <div class="up-container">
+      <div id="box1">
+        <div>
+          <img src="./assets/Logo_Consultec.png" width="140px" height="50px" />
         </div>
         <div>
-            caja 2
+          <h2 id="aside-text">
+            Te damos la bienvenida al portal Personal Banking
+          </h2>
         </div>
+        <div>
+          <p id="aside-text-down">¿Eres nuevo en el banco?</p>
+          <a id="create-key-text" href="#">Crea tu clave</a>
+        </div>
+      </div>
+      <div id="down-container">
+        <div>
+          <p id="aside-text-up-box2">¿Aún no tienes una cuenta?</p>
+          <a id="register-now" href="#">Registrate ahora</a>
+        </div>
+      </div>
     </div>
-</div>  
+    <div id="box2">
+      <div id="main-login">
+        <div class="text-signin">
+          <span id="start-text"
+            >Inicio de<span id="session-text"> sesión</span></span
+          >
+        </div>
+      </div>
+      <div id="signin-form">
+        <form>
+          <div id="inputs-form">
+            <input
+              type="email"
+              id="email"
+              placeholder="Ingresa tu correo electrónico"
+              required
+            />
+            <div class="input-container">
+              <input
+                type="password"
+                id="password"
+                placeholder="Ingresa tu clave de internet"
+                required
+              />
+              <img
+                src="./assets/eye.png"
+                width="20px"
+                height="20px"
+                class="input-icon"
+              />
+            </div>
+          </div>
+        </form>
+      </div>
+      <div id="text-trouble">
+        <span id="trobule-message">¿Tienes problemas con tu cuenta?<span id="recovery-message"> Recuperar contraseña</span></span>
+      </div>
+      <div id="login-btn">
+        <div>
+            <button id="login-button">Iniciar sesión</button>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
